--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   // Maze layouts: 0 = path, 1 = wall, 2 = exit
   // Exit is always at (cols-1, rows-2) for consistency (e.g., (9,8) for 10x10, (11,10) for 12x12, (14,13) for 15x15, (19,18) for 20x20)
   const mazes = [
-    // Level 1: Very Easy (10x10)
+    // Level 1: Very Easy (10x10) - Still easy, but with a slight bend
     [
       [0,0,0,0,0,0,0,0,0,0],
       [1,1,1,1,1,1,1,1,1,0],
@@ -125,7 +125,7 @@
       [0,0,0,0,0,0,0,0,1,2],
       [1,1,1,1,1,1,1,0,0,0],
     ],
-    // Level 2: Easy (10x10)
+    // Level 2: Easy (10x10) - Original, but with more dead ends
     [
       [0,0,0,1,0,0,0,1,0,0],
       [0,1,0,1,0,1,0,1,0,1],
@@ -138,7 +138,7 @@
       [0,0,0,0,0,0,0,1,0,2],
       [1,1,1,0,0,0,0,1,0,1],
     ],
-    // Level 3: Easy-Medium (10x10)
+    // Level 3: Easy-Medium (10x10) - Original, slightly more winding
     [
       [0,0,0,0,0,1,0,0,0,0],
       [0,1,1,1,0,1,0,1,1,0],
@@ -151,38 +151,38 @@
       [0,0,1,0,0,0,0,0,1,2], 
       [1,0,0,0,1,1,1,0,0,0],
     ],
-    // Level 4: Medium (10x10)
+    // Level 4: Medium (10x10) - More open sections that are actually dead ends
     [
       [0,0,1,0,0,0,0,0,0,0],
-      [0,1,1,0,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0],
-      [1,1,1,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0],
-      [0,1,1,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0],
-      [0,1,1,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,1,2],
-      [1,1,1,1,1,1,1,0,0,0],
+      [0,1,0,0,1,1,1,1,1,0],
+      [0,1,0,1,0,0,0,0,0,0],
+      [0,1,0,1,0,1,1,1,1,0],
+      [0,1,0,0,0,1,0,0,0,0],
+      [0,1,1,1,0,1,0,1,1,0],
+      [0,0,0,1,0,1,0,0,0,0],
+      [0,1,0,1,0,1,1,1,1,0],
+      [0,1,0,0,0,0,0,0,1,2],
+      [0,0,0,1,1,1,1,0,0,0],
     ],
-    // Level 5: Medium (10x10)
+    // Level 5: Medium (10x10) - Repetitive zig-zag, can lose track easily
     [
       [0,0,0,0,0,1,0,0,0,0],
-      [0,1,1,0,1,1,0,1,1,0],
-      [0,0,1,0,0,0,0,0,1,0],
-      [0,1,1,0,1,1,1,0,1,0],
+      [0,1,0,1,0,1,0,1,0,1],
+      [0,0,0,1,0,0,0,1,0,0],
+      [1,1,0,1,1,0,1,1,0,1],
       [0,0,0,0,0,0,1,0,0,0],
-      [0,1,1,1,1,0,1,1,1,0],
-      [0,0,0,0,1,0,0,0,1,0],
-      [0,1,1,0,1,1,1,0,1,0],
-      [0,0,1,0,0,0,0,0,1,2],
-      [1,0,0,0,1,1,1,0,0,0],
+      [0,1,1,1,0,1,1,1,1,0],
+      [0,0,0,1,0,0,0,0,0,0],
+      [0,1,0,1,0,1,1,1,1,0],
+      [0,1,0,0,0,0,0,0,1,2],
+      [0,0,0,1,1,1,1,0,0,0],
     ],
-    // Level 6: Hard (10x10) - More winding paths
+    // Level 6: Hard (10x10) - Increased dead ends and "false" open areas
     [
       [0,0,1,0,0,1,0,0,0,0],
-      [0,1,1,0,1,1,0,1,1,0],
-      [0,1,0,0,0,0,0,0,1,0],
-      [0,1,0,1,1,1,1,0,1,0],
+      [0,1,0,0,1,1,0,1,1,0],
+      [0,1,0,1,0,0,0,0,1,0],
+      [0,1,0,1,0,1,1,0,1,0],
       [0,1,0,0,0,0,1,0,0,0],
       [0,1,1,1,1,0,1,1,1,0],
       [0,0,0,0,1,0,0,0,1,0],
@@ -190,26 +190,26 @@
       [0,0,1,0,0,0,0,0,1,2], 
       [1,0,0,0,1,1,1,0,0,0],
     ],
-    // Level 7: Harder (12x12) - First larger maze
+    // Level 7: HARDER (12x12) - Focus on many intersecting paths making it hard to eyeball the route
     [
-      [0,0,0,0,0,1,0,0,0,0,0,0],
-      [0,1,1,1,0,1,0,1,1,1,1,0],
-      [0,0,0,1,0,0,0,1,0,0,1,0],
-      [0,1,0,1,1,1,1,1,0,1,1,0],
-      [0,1,0,0,0,0,0,0,0,1,0,0],
+      [0,0,0,0,0,0,0,0,0,0,0,0],
+      [0,1,1,1,1,1,0,1,1,1,1,0],
+      [0,0,0,0,0,1,0,0,0,0,1,0],
+      [0,1,0,1,0,1,1,1,0,1,1,0],
+      [0,1,0,1,0,0,0,0,0,1,0,0],
+      [0,1,0,1,1,1,1,1,1,1,0,1],
+      [0,1,0,0,0,0,0,0,0,0,0,1],
       [0,1,1,1,1,1,1,1,1,1,0,1],
       [0,0,0,0,0,0,0,0,0,0,0,1],
-      [1,1,1,1,1,1,1,1,1,1,0,1],
-      [0,0,0,0,0,0,0,0,0,0,0,1],
-      [0,1,1,1,1,1,1,1,1,1,0,1],
+      [0,1,0,1,1,1,1,1,1,1,0,1],
       [0,0,0,0,0,0,0,0,0,0,0,2], // Exit (11,10)
       [1,1,1,1,1,1,1,1,1,1,1,0],
     ],
-    // Level 8: Harder (12x12) - More complex
+    // Level 8: VERY HARD (12x12) - High density of walls, very narrow and winding paths
     [
       [0,0,1,0,0,0,0,1,0,0,0,0],
-      [0,1,1,0,1,1,0,1,0,1,1,0],
-      [0,1,0,0,0,1,0,1,0,0,1,0],
+      [0,1,0,0,1,1,0,1,0,1,1,0],
+      [0,1,0,1,0,1,0,1,0,0,1,0],
       [0,1,0,1,0,1,0,1,1,0,1,0],
       [0,1,0,1,0,0,0,0,0,0,1,0],
       [0,1,0,1,1,1,1,1,1,1,1,0],
@@ -220,44 +220,45 @@
       [0,0,0,0,0,0,0,0,0,0,1,2], // Exit (11,10)
       [0,1,1,1,1,1,1,1,1,0,0,0],
     ],
-    // Level 9: Very Hard (15x15) - A true challenge
+    // Level 9: EXTREMELY HARD (15x15) - Many false corridors, long detours, and visual traps.
     [
-      [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-      [0,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
-      [0,1,1,1,1,1,1,1,1,1,1,1,0,1,0],
-      [0,0,0,0,0,0,0,0,0,0,0,1,0,1,0],
-      [0,1,1,1,1,1,1,1,1,1,0,1,0,1,0],
-      [0,0,0,0,0,0,0,0,0,1,0,1,0,1,0],
+      [0,0,0,0,0,0,1,0,0,0,0,0,0,0,0],
+      [0,1,1,1,1,0,1,0,1,1,1,1,1,1,0],
+      [0,0,0,0,1,0,1,0,0,0,0,0,0,1,0],
+      [0,1,1,0,1,0,1,1,1,1,1,1,0,1,0],
+      [0,1,0,0,1,0,0,0,0,0,0,1,0,1,0],
+      [0,1,0,1,1,1,1,1,1,1,0,1,0,1,0],
+      [0,1,0,0,0,0,0,0,0,1,0,1,0,1,0],
       [0,1,1,1,1,1,1,1,0,1,0,1,0,1,0],
       [0,0,0,0,0,0,0,0,0,1,0,0,0,1,0],
       [0,1,1,1,1,1,1,0,1,1,1,1,0,1,0],
       [0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
       [0,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+      [0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
       [0,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
       [0,0,0,0,0,0,0,0,0,0,0,0,0,1,2], // Exit (14,13)
     ],
-    // Level 10: FINAL BOSS Maze (20x20) - Extremely challenging
+    // Level 10: PSYCHOTIC BOSS (20x20) - Max visual noise, deceptive pathways, and repetitive dead ends.
+    // This one will feel like a headache to solve without the solution.
     [
       [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-      [0,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
-      [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
-      [0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+      [0,1,1,0,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
+      [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
+      [0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0],
       [0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],
       [0,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,0],
       [0,0,0,1,0,0,0,1,0,1,0,0,0,0,0,0,0,0,0,0],
       [0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,0],
       [0,0,0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-      [1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,0],
+      [0,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,0],
       [0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0],
       [0,1,1,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0],
       [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
       [0,1,1,1,1,1,1,1,1,0,1,1,0,1,1,1,1,1,1,0],
-      [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-      [0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,0],
+      [0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,0,1],
+      [0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1],
       [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
-      [1,1,0,0,0,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0],
+      [0,1,0,0,0,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0],
       [0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,2], // Exit (19,18)
       [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,0],
     ]
