--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
         // Initial draw of the first maze when the page loads
         drawMaze();
-        message.textContent = 'Navigate the maze!';
+        message.textContent = 'Ditdit Krazy';
     </script>
 </body>
 </html>
